Fixed media player on mobile

--- a/scss/_music.scss
+++ b/scss/_music.scss
@@ -170,12 +170,13 @@
     opacity: 0.5;
   }
 }
-@media (max-width: 480px) {
-  .player-body {
-    height: 50vh;
-    width: 50vw;
-  }
-}
+// Is fine without
+// @media (max-width: 480px) {
+//   .player-body {
+//     height: 50vh;
+//     width: 50vw;
+//   }
+// }
 @media (max-height: 400px) {
   .player-body {
     height: 35vh;
